--- a/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -12,10 +12,10 @@
 <div class="col-md-10">
 <table class="table">
     <tr class="title">
-        <td>Column0</td>
-        <td >Column1</td>
+        <td>Column1</td>
         <td >Column2</td>
         <td >Column3</td>
+        <td >Column4</td>
     </tr>
 
     <tr><td class="columnOfCards" id="c0">
@@ -34,6 +34,7 @@
             <tr><td class="cardLocation l11"></td></tr>
             <tr><td class="cardLocation l12"></td></tr>
             <tr><td class="cardLocation l13"></td></tr>
+            <tr><td><button id="Remove1">Column1</button></td></tr>
         </table>
     </td>
         <td class="columnOfCards" id="c1">
@@ -52,6 +53,7 @@
                 <tr><td class="cardLocation l11"></td></tr>
                 <tr><td class="cardLocation l12"></td></tr>
                 <tr><td class="cardLocation l13"></td></tr>
+                <tr><td><button id="Remove2">Column2</button></td></tr>
             </table>
         </td>
         <td class="columnOfCards" id="c2">
@@ -70,6 +72,7 @@
                 <tr><td class="cardLocation l11"></td></tr>
                 <tr><td class="cardLocation l12"></td></tr>
                 <tr><td class="cardLocation l13"></td></tr>
+                <tr><td><button id="Remove3">Column3</button></td></tr>
             </table>
         </td>
         <td class="columnOfCards" id="c3">
@@ -88,6 +91,7 @@
                 <tr><td class="cardLocation l11"></td></tr>
                 <tr><td class="cardLocation l12"></td></tr>
                 <tr><td class="cardLocation l13"></td></tr>
+                <tr><td><button id="Remove4">Column4</button></td></tr>
             </table>
         </td>
     </tr>
@@ -97,13 +101,26 @@
         <p id="textArea" >Append all text Here!! id=textArea for js purposes</p>
     </div>
 </div>
+<div class="row">
+<div class="col-sm-4">
+    <button id="newGame">New Game</button>
+</div>
+<div class="col-sm-4">
+    <button id="dealButton">Deal</button>
+</div>
 
-<button id="dealButton">Deal</button>
-<BR>Remove from: <button id="Remove1">Column1</button><button id="Remove2">Column2</button><button id="Remove3">Column3</button><button id="Remove4">Column4</button>
-
-<BR>Move from column <input type="text" id="from_col"  /> to <input type="text" id="to_col"  /> <button id="moveButton">Move</button>
-
-<BR> <button id="newGame">New Game</button>
+<div class="col-sm-4">
+    <input type="radio" name="fromCol" value="0" id="fromCol1"> Column 1
+    <input type="radio" name="toCol" value="0" id="toCol1"> Column 1<br>
+    <input type="radio" name="fromCol" value="1" id="fromCol2"> Column 2
+    <input type="radio" name="toCol" value="1" id="toCol2"> Column 2<br>
+    <input type="radio" name="fromCol" value="2" id="fromCol3"> Column 3
+    <input type="radio" name="toCol" value="2" id="toCol3"> Column 3<br>
+    <input type="radio" name="fromCol" value="3" id="fromCol4"> Column 4
+    <input type="radio" name="toCol" value="3" id="toCol4"> Column 4<br>
+    <button id="move">Move</button>
+</div>
+</div>
 <script>
 
 var game;
@@ -183,7 +200,7 @@ $("#Remove4").click(function(){
 $("#newGame").click(function(){
     location.reload();
 });
-
+/*
 $("#moveButton").click(function(){
 var colFrom = $("#from_col").val();
 var colTo = $("#to_col").val();
@@ -197,6 +214,34 @@ $.ajax({
   contentType:"application/json; charset=utf-8",
   dataType:"json",
 });
+});*/
+
+$("#move").click(function(){
+var fromCol = document.getElementsByName('fromCol');
+for (var i = 0; i < 4; i++){
+    if(fromCol[i].checked){
+        var fromColVal = fromCol[i].value;
+    }
+}
+
+var toCol = document.getElementsByName('toCol');
+for (var i = 0; i < 4; i++){
+    if(toCol[i].checked){
+        var toColVal = toCol[i].value;
+    }
+}
+
+$.ajax({
+  type: "POST",
+  url: "/moveCard/"+fromColVal+"/"+toColVal,
+  data: JSON.stringify(game),
+  success: function(data, status){console.log("Data: " + data + "\nStatus: " + status);
+        game = data;
+        display(data);},
+  contentType:"application/json; charset=utf-8",
+  dataType:"json",
+});
+
 });
 
 
