--- a/Assignment2/src/main/java/assets/css/AcesUp.css
+++ b/Assignment2/src/main/java/assets/css/AcesUp.css
@@ -1,3 +1,8 @@
+#titleDiv
+{
+    padding-left:40%;
+}I
+
 tr{
 width:500px;
 }
@@ -5,6 +10,8 @@ width:500px;
 td{
 width:100px;
 height:20px;
+font-family: Garamond;
+font-size: 18px;
 text-align:center;
 }
 
@@ -12,7 +19,125 @@ text-align:center;
 font-weight: bold;
 }
 
+#textArea
+{
+    font-family:Courier New;
+    font-size:16px;
+}
+
 .cardLocation{
 width: 100px;
 background-color:#F0F0F0;
 }
+
+#dealBtnDiv
+{
+    position: absolute;
+    left: 40%;
+}
+
+#dealButton
+{
+      background: #3cb0ff;
+      /*text-align: center;*/
+      border-radius: 12px;
+      border: none;
+      font-family: Century Gothic;
+      color: #ffffff;
+      font-size: 17px;
+      padding: 4px 15px 4px 15px;
+      text-decoration: none;
+}
+
+#dealButton:hover {
+      background: #3498db;
+      text-decoration: none;
+}
+
+h1{
+font-family: Garamond;
+}
+
+#remFromSpan
+{
+    font-family:Century Gothic;
+    font-size: 17px;
+}
+
+#mvFromSpan
+{
+    font-family:Century Gothic;
+    font-size: 15px;
+}
+
+#mvDiv
+{
+    position: relative;
+    left: 28.5%;
+}
+
+#remDiv
+{
+    position: relative;
+    left: 20%;
+}
+
+#newgameAndInst
+{
+    float:right;
+    display:inline;
+}
+
+#newGame
+{
+    font-family:Century Gothic;
+    font-size:13px;
+}
+
+#inst
+{
+    font-family:Century Gothic;
+    font-size:13px;
+}
+
+#Remove1
+{
+    font-family:Century Gothic;
+        font-size:13px;
+}
+
+#Remove2
+{
+    font-family:Century Gothic;
+        font-size:13px;
+}
+
+#Remove3
+{
+    font-family:Century Gothic;
+        font-size:13px;
+}
+
+#Remove4
+{
+    font-family:Century Gothic;
+        font-size:13px;
+}
+
+#MoveButton
+{
+    font-family:Century Gothic;
+        font-size:15px;
+}
+
+.radio
+{
+    left:38%;
+}
+
+.mvDiv
+{
+    position:absolute;
+    left:41%;
+}
+
