--- a/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/Assignment2/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -111,7 +111,6 @@
     <button id="inst" class="btn btn-warning">Instructions</button>
 </div>
 
-<!--<div id="dealBtnDiv"><button id="dealButton">Deal</button></div>-->
 <div class="mvDiv"><button id="move" class="btn btn-danger">Move</button></div>
 <br>
 <br>
@@ -183,7 +182,8 @@ $.ajax({
 });
 
 $("#inst").click(function(){
-    document.getElementById("textArea").innerHTML="Hello Baby!";
+    document.getElementById("textArea").innerHTML="Deal four cards in a row face up If there are two or more cards of the same suit, discard all but the highest-ranked card of that suit.
+Repeat until there are no more pairs of cards with the same suit. Whenever there are any empty spaces, you may choose the top card of another pile to be put into the empty space. When there are no more cards to move or remove, deal out the next four cards from the deck face-up onto each pile. Repeat using only the visible, or top, cards on each of the four piles. When the last four cards have been dealt out and any moves made, the game is over. The fewer cards left in the tableau, the better. To win is to have only the four aces left.";
 });
 
 
@@ -207,10 +207,7 @@ dataType:"json",
 
 }
 
-//var textBox = document.getElementByID("textArea");
-
 $("#Remove1").click(function(){
-   //  textBox.text().replace(data["errMsg"]);
     removeCard(0);
 });
 $("#Remove2").click(function(){
