--- a/src/main/java/views/AcesUp/AcesUp.flt.html
+++ b/src/main/java/views/AcesUp/AcesUp.flt.html
@@ -1,5 +1,5 @@
 <div id="titleDiv"><h1 style="font-family:Palatino; font-size: 40px">Aces Up</h1></div>
-
+<p id="choice"></p>
 <link href="/assets/css/AcesUp.css" rel="stylesheet">
 <script type="text/javascript" src="/assets/webjars/jquery/2.1.3/jquery.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -98,6 +98,9 @@
 </div>
 
     <br><br><br><br>
+    <input type="radio" name="choose" value="0" id="span"> Spanish
+    <input type="radio" name="choose" value="1" id="amer"> American
+
     <p style="font-family:Century Gothic; font-size: 17px; float:right; padding-right: 4.5%">Message Box</p>
     <div id="messageBox" style="border:0px; border-style:solid; border-color:; padding=1em; " class="col-md-2 bg-danger">
         <p id="textArea" style="text-align:center">Message Box (id=textArea)</p>
@@ -142,7 +145,7 @@ console.log(game);
 
 $( '.columnOfCards .cardLocation' ).html("");
 
-    $.each(game.cols[0], function( key, val ) {
+  $.each(game.cols[0], function( key, val ) {
         $( '#c0 .l'+key ).html(val.value + " of " + val.suit);
     });
 
@@ -158,14 +161,38 @@ $( '.columnOfCards .cardLocation' ).html("");
         $( '#c3 .l'+key ).html(val.value + " of " + val.suit);
     });
 
-
-
 }
 
 $.getJSON("http://localhost:8080/game", function( data ) {
 display(data);
 game = data;
+
 });
+
+// Checking for radio input
+var prev = null;
+var userCheck = document.getElementsByName('choose');
+for (var i = 0; i < 2; i++){
+    // Function that checks if the user changed deck option
+    userCheck[i].onclick = function() {
+    $.ajax({
+  type: "POST",
+  url: "/game/"+this.value,
+  data: JSON.stringify(game),
+  success: function(data, status){console.log("Data: " + data + "\nStatus: " + status);
+        game = data;
+        display(data);},
+  contentType:"application/json; charset=utf-8",
+  dataType:"json",
+});
+        if(this.value == 0){
+            document.getElementById("choice").innerHTML = "Deck: Spanish";
+        }
+        else{
+            document.getElementById("choice").innerHTML = "Deck: American";
+        }
+    };
+}
 
 
 $("#dealButton").click(function(){
